add css and html content and styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
 
-    <h1>Awesome Books</h1>
+    <nav>
+        <h1>Awesome Books</h1>
+        <di class="nav-links">
+
+        </div>
+    </nav>
+    <main>
     <div class="book-container">
 
     </div>
@@ -18,8 +25,11 @@
          <br><br>
         <input type="text" placeholder="Author" id="authorInput">
         <br> <br>
-        <button type="button" id="addBtn">Add</button>
+        <div class="add-btn-div">
+            <button type="button" id="addBtn">Add</button>
+        </div>
     </form>
+    </main>
 
     <script src="index.js"></script>
 </body>
