add error message for emmpty field input

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="add-btn-div">
             <button type="button" id="addBtn">Add</button>
         </div>
+        <p class="notice hidden">⛔ Fields cannot be empty</p>
     </form>
     </main>
 
