add laxon datetime library

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body class="flex-center">
     <div class="container flex-center">
         <nav>
-            <a href="logo-link"><h1>Awesome Books</h1></a>
+            <a href="index.html"><h1>Awesome Books</h1></a>
             <div class="nav-link">
                 <a class="list-link active" href="#">List</a>
+                <span class="line"></span>
                 <a class="add-link" href="#">Add new</a>
+                <span class="line"></span>
                 <a class="contact-link" href="#">Contact</a>
             </div>
         </nav>
+        <p class="time">TIME</p>
 
         <main>
             <!--List of awesome books-->
@@ -53,7 +56,7 @@
             </div>
             
         
-            <script src="index.js"></script>
+            <script type="module" src="index.js"></script>
 
     <footer class="copyright">
         <p>Copyright   ...</p>
