remove time dummy text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="contact-link" href="#">Contact</a>
             </div>
         </nav>
-        <p class="time">TIME</p>
+        <p class="time"></p>
 
         <main>
             <!--List of awesome books-->
